--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,34 +12,55 @@
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_light">
 
+        <EditText
+            android:id="@+id/etCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@color/black"
+            android:hint="Поиск по городу"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </EditText>
+
+        <TextView
+            android:id="@+id/tvSendCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Найти"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@id/etCity"
+            app:layout_constraintBottom_toBottomOf="@id/etCity"
+            app:layout_constraintTop_toTopOf="@id/etCity"/>
+
         <TextView
             android:id="@+id/tvCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="City"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/etCity" />
 
         <TextView
             android:id="@+id/tvLocaltime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Localtime"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/etCity" />
 
         <TextView
             android:id="@+id/tvTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Temperature"
             android:textColor="@color/black"
             android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@id/tvDescriptionWeather"
@@ -65,7 +86,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginTop="10dp"
-            android:text="Wind"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/tvWindLabel"
@@ -90,7 +110,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginTop="10dp"
-            android:text="Pressure"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/tvPressureLabel"
@@ -115,7 +134,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_marginTop="10dp"
-            android:text="Humidity"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/tvHumidityLabel"
@@ -137,7 +155,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Description"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/ivCurrentWeather"
@@ -197,7 +214,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvWeatherHourInfo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +222,6 @@
             tools:listitem="@layout/item_weather_info">
 
         </androidx.recyclerview.widget.RecyclerView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
